packages/cashc/test/compiler/InvalidParameterTypeError/locking_bytecode_p2pkh_bytes32.cash
pragma cashscript ^0.6.0;

contract P2PKH(bytes20 pkh) {
    function spend(pubkey pk, sig s) {
        require(checkSig(s, pk));
        require(tx.outputs[0].lockingBytecode == new LockingBytecodeP2PKH(sha256(pkh)));
    }
}
